code25_all/scala/14578662.txt
scala> List(Some(1),Some(2),None,Some(3))
res0: List[Option[Int]] = List(Some(1), Some(2), None, Some(3))

scala> res0 map (_ + 1)

<console>:9: error: type mismatch;
 found   : Int(1)
 required: String
              res0 map (_ + 1)
                            ^

scala> res0 flatMap (_ + 1)

<console>:9: error: type mismatch;
 found   : Int(1)
 required: String
              res0 flatMap (_ + 1)
                                ^

res0.flatMap(r => r)
res9: List[Int] = List(1, 2, 3)

